--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <artifactId>joda-time</artifactId>
   <packaging>jar</packaging>
   <name>Joda time</name>
-  <version>2.0</version>
+  <version>2.0-streamedparsing</version>
   <description>Date and time library to replace JDK date handling</description>
   <url>http://joda-time.sourceforge.net</url>
   <issueManagement>
@@ -167,8 +167,8 @@
             <phase>compile</phase>
             <configuration>
               <tasks>
-                <property name="tz.src" value="${pom.build.sourceDirectory}/org/joda/time/tz/src" />
-                <property name="tz.dst" value="${pom.build.outputDirectory}/org/joda/time/tz/data" />
+                <property name="tz.src" value="${project.build.sourceDirectory}/org/joda/time/tz/src" />
+                <property name="tz.dst" value="${project.build.outputDirectory}/org/joda/time/tz/data" />
                 <!--uptodate property="tz.build.notneeded" targetfile="${tz.dst}/ZoneInfoMap" >
                   <srcfiles dir="${tz.src}" includes="**/*.*"/>
                 </uptodate-->
